Selection of Iurii's fully lithiated structures from properly created df.

--- a/code/iuriis_data_df.ipynb
+++ b/code/iuriis_data_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import os\n",
     "import glob\n",
     "import copy\n",
+    "from pathlib import Path\n",
     "\n",
     "from pprint import pprint\n",
     "import itertools as it\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +62,7 @@
        "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,19 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "spinel_dir_iurii = '/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod'\n",
-    "olivine_dir_iurii = '/home/jgeiger/projects/bat_uv_ml/data/olivines_iurii_unmod'\n",
+    "olivine_dir_iurii = '/home/jgeiger/projects/bat_uv_ml/data/olivine_iurii_unmod'\n",
     "project_dir = '/home/jgeiger/projects/bat_uv_ml'\n",
     "pseudo_dir = '/usr/share/espresso/pseudo/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +114,18 @@
     "\n",
     "    full_project_df = pd.DataFrame()\n",
     "    full_project_df['abs_path'] = [os.path.dirname(_) for _ in path_list]\n",
-    "    full_project_df['filename'] = [os.path.basename(_) for _ in path_list]\n",
+    "    full_project_df['calc_in'] = [os.path.basename(_) for _ in path_list]\n",
     "    # ! Rel path buggy because it ends up being \n",
     "    # full_project_df['rel_path'] = full_project_df['abs_path'].str.replace(project_dir, '.')\n",
     "\n",
     "    return full_project_df\n",
     "\n",
-    "def add_calctype(df_in):\n",
+    "def add_calcdata(df_in):\n",
     "    calctype_regex = r\"\\.(pdos|dos|nscf|scf|hp|vcrelax)\\.\"\n",
     "    df_out = df_in.copy(deep=True)\n",
-    "    df_out['calctype'] = df_out['filename'].str.extract(calctype_regex)\n",
+    "    df_out['calc_name'] = df_out['calc_in'].apply(lambda x: Path(x).stem)\n",
+    "    df_out['calc_type'] = df_out['calc_in'].str.extract(calctype_regex)\n",
+    "    df_out['calc_out'] = df_out['calc_in'].str.replace('.in', '.out', regex=False)\n",
     "    return df_out\n",
     "\n",
     "# ! Also matches paremeters.in file, which results in calctype = nan\n",
@@ -130,30 +133,26 @@
     "    calc_dir=spinel_dir_iurii,\n",
     "    file_glob='.in' # ('.in', '.out')\n",
     "    )\n",
-    "spinel_df_iurii = add_calctype(spinel_df_iurii)\n",
-    "# spinel_df_iurii = spinel_df_iurii.dropna()\n",
-    "\n",
     "\n",
     "olivine_df_iurii = init_project_df(\n",
     "    calc_dir=olivine_dir_iurii,\n",
-    "    file_glob=('.in', '.out')\n",
+    "    file_glob='.in'\n",
     "    )\n",
-    "olivine_df_iurii = add_calctype(olivine_df_iurii)\n",
     "# olivine_df_iurii = olivine_df_iurii.dropna()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2510, 4)"
+       "(1304, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -179,9 +178,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>abs_path</th>\n",
-       "      <th>filename</th>\n",
-       "      <th>rel_path</th>\n",
-       "      <th>calctype</th>\n",
+       "      <th>calc_in</th>\n",
+       "      <th>calc_name</th>\n",
+       "      <th>calc_type</th>\n",
+       "      <th>calc_out</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -189,109 +189,83 @@
        "      <th>0</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.1.in</td>\n",
-       "      <td>./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.1</td>\n",
        "      <td>scf</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.1.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>LiMn1.5Ni0.5O4.dos.out</td>\n",
-       "      <td>./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>dos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2</td>\n",
+       "      <td>scf</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
-       "      <td>./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>scf</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.dos.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.dos</td>\n",
+       "      <td>dos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.dos.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
-       "      <td>./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>scf</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.pdos.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.pdos</td>\n",
+       "      <td>pdos</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.pdos.out</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>LiMn1.5Ni0.5O4.dos.in</td>\n",
-       "      <td>./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
-       "      <td>dos</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.vcrelax.in</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.vcrelax</td>\n",
+       "      <td>vcrelax</td>\n",
+       "      <td>LiMn1.5Ni0.5O4.vcrelax.out</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                               abs_path  \\\n",
-       "0  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "1  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "2  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "3  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "4  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
+       "                                                                                                  abs_path  \\\n",
+       "0     /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
+       "1     /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
+       "2     /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
+       "3     /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
+       "4  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax   \n",
        "\n",
-       "                   filename  \\\n",
-       "0   LiMn1.5Ni0.5O4.scf.1.in   \n",
-       "1    LiMn1.5Ni0.5O4.dos.out   \n",
-       "2   LiMn1.5Ni0.5O4.scf.2.in   \n",
-       "3  LiMn1.5Ni0.5O4.scf.2.out   \n",
-       "4     LiMn1.5Ni0.5O4.dos.in   \n",
+       "                     calc_in               calc_name calc_type  \\\n",
+       "0    LiMn1.5Ni0.5O4.scf.1.in    LiMn1.5Ni0.5O4.scf.1       scf   \n",
+       "1    LiMn1.5Ni0.5O4.scf.2.in    LiMn1.5Ni0.5O4.scf.2       scf   \n",
+       "2      LiMn1.5Ni0.5O4.dos.in      LiMn1.5Ni0.5O4.dos       dos   \n",
+       "3     LiMn1.5Ni0.5O4.pdos.in     LiMn1.5Ni0.5O4.pdos      pdos   \n",
+       "4  LiMn1.5Ni0.5O4.vcrelax.in  LiMn1.5Ni0.5O4.vcrelax   vcrelax   \n",
        "\n",
-       "                                                                rel_path  \\\n",
-       "0  ./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "1  ./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "2  ./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "3  ./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "4  ./data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
-       "\n",
-       "  calctype  \n",
-       "0      scf  \n",
-       "1      dos  \n",
-       "2      scf  \n",
-       "3      scf  \n",
-       "4      dos  "
+       "                     calc_out  \n",
+       "0    LiMn1.5Ni0.5O4.scf.1.out  \n",
+       "1    LiMn1.5Ni0.5O4.scf.2.out  \n",
+       "2      LiMn1.5Ni0.5O4.dos.out  \n",
+       "3     LiMn1.5Ni0.5O4.pdos.out  \n",
+       "4  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# spinel_df_iurii.head()\n",
-    "# olivine_df_iurii.head()\n",
-    "\n",
-    "# spinel_df_iurii.shape\n",
-    "# olivine_df_iurii.shape\n",
-    "# spinel_df_iurii.isna().sum()\n",
-    "# olivine_df_iurii.isna().sum()\n",
-    "# spinel_df_iurii[spinel_df_iurii.isna().any(axis=1)]\n",
-    "\n",
     "iurii_full_data_df = pd.concat([spinel_df_iurii, olivine_df_iurii], ignore_index=True)\n",
+    "iurii_full_data_df = add_calcdata(iurii_full_data_df)\n",
+    "\n",
     "iurii_full_data_df.shape\n",
-    "iurii_full_data_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1304, 4)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "iurii_full_data_df['calcname'] = iurii_full_data_df['filename'].str.replace('.in', '')"
+    "iurii_full_data_df.head()\n",
+    "\n",
+    "# pandas write to csv\n",
+    "iurii_full_data_df.to_csv(os.path.join(project_dir, 'data', 'iurii_full_data_df.csv'), index=False)\n"
    ]
   },
   {
@@ -461,6 +435,8 @@
     }
    ],
    "source": [
+    "\n",
+    "# ! Way too complex with builder, do it via ase reading in QE input\n",
     "def add_structure_data(df_in):\n",
     "    df_out = df_in.copy(deep=True)\n",
     "    # iterate over tuples of dataframe rows\n",
