--- a/code/iuriis_data_df.ipynb
+++ b/code/iuriis_data_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "Profile<uuid='4fe00b7a32994cfca8b6cf43c2d22a53' name='jgeiger'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +115,7 @@
     "    full_project_df = pd.DataFrame()\n",
     "    full_project_df['abs_path'] = [os.path.dirname(_) for _ in path_list]\n",
     "    full_project_df['calc_in'] = [os.path.basename(_) for _ in path_list]\n",
+    "    full_project_df['abs_path_in'] = path_list\n",
     "    # ! Rel path buggy because it ends up being \n",
     "    # full_project_df['rel_path'] = full_project_df['abs_path'].str.replace(project_dir, '.')\n",
     "\n",
@@ -143,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1304, 5)"
+       "(1304, 6)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -179,6 +180,7 @@
        "      <th></th>\n",
        "      <th>abs_path</th>\n",
        "      <th>calc_in</th>\n",
+       "      <th>abs_path_in</th>\n",
        "      <th>calc_name</th>\n",
        "      <th>calc_type</th>\n",
        "      <th>calc_out</th>\n",
@@ -189,6 +191,7 @@
        "      <th>0</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.1.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.scf.1.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.1</td>\n",
        "      <td>scf</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.1.out</td>\n",
@@ -197,6 +200,7 @@
        "      <th>1</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.2.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.scf.2.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.2</td>\n",
        "      <td>scf</td>\n",
        "      <td>LiMn1.5Ni0.5O4.scf.2.out</td>\n",
@@ -205,6 +209,7 @@
        "      <th>2</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.dos.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.dos.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.dos</td>\n",
        "      <td>dos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.dos.out</td>\n",
@@ -213,6 +218,7 @@
        "      <th>3</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.pdos.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.pdos.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.pdos</td>\n",
        "      <td>pdos</td>\n",
        "      <td>LiMn1.5Ni0.5O4.pdos.out</td>\n",
@@ -221,6 +227,7 @@
        "      <th>4</th>\n",
        "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax</td>\n",
        "      <td>LiMn1.5Ni0.5O4.vcrelax.in</td>\n",
+       "      <td>/home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax/LiMn1.5Ni0.5O4.vcrelax.in</td>\n",
        "      <td>LiMn1.5Ni0.5O4.vcrelax</td>\n",
        "      <td>vcrelax</td>\n",
        "      <td>LiMn1.5Ni0.5O4.vcrelax.out</td>\n",
@@ -237,22 +244,29 @@
        "3     /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos   \n",
        "4  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax   \n",
        "\n",
-       "                     calc_in               calc_name calc_type  \\\n",
-       "0    LiMn1.5Ni0.5O4.scf.1.in    LiMn1.5Ni0.5O4.scf.1       scf   \n",
-       "1    LiMn1.5Ni0.5O4.scf.2.in    LiMn1.5Ni0.5O4.scf.2       scf   \n",
-       "2      LiMn1.5Ni0.5O4.dos.in      LiMn1.5Ni0.5O4.dos       dos   \n",
-       "3     LiMn1.5Ni0.5O4.pdos.in     LiMn1.5Ni0.5O4.pdos      pdos   \n",
-       "4  LiMn1.5Ni0.5O4.vcrelax.in  LiMn1.5Ni0.5O4.vcrelax   vcrelax   \n",
+       "                     calc_in  \\\n",
+       "0    LiMn1.5Ni0.5O4.scf.1.in   \n",
+       "1    LiMn1.5Ni0.5O4.scf.2.in   \n",
+       "2      LiMn1.5Ni0.5O4.dos.in   \n",
+       "3     LiMn1.5Ni0.5O4.pdos.in   \n",
+       "4  LiMn1.5Ni0.5O4.vcrelax.in   \n",
        "\n",
-       "                     calc_out  \n",
-       "0    LiMn1.5Ni0.5O4.scf.1.out  \n",
-       "1    LiMn1.5Ni0.5O4.scf.2.out  \n",
-       "2      LiMn1.5Ni0.5O4.dos.out  \n",
-       "3     LiMn1.5Ni0.5O4.pdos.out  \n",
-       "4  LiMn1.5Ni0.5O4.vcrelax.out  "
+       "                                                                                                                         abs_path_in  \\\n",
+       "0       /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.scf.1.in   \n",
+       "1       /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.scf.2.in   \n",
+       "2         /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.dos.in   \n",
+       "3        /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/5_pdos/LiMn1.5Ni0.5O4.pdos.in   \n",
+       "4  /home/jgeiger/projects/bat_uv_ml/data/spinel_iurii_unmod/LixMn1.5Ni0.5O4/DFT+U/LiMn1.5Ni0.5O4/3_vcrelax/LiMn1.5Ni0.5O4.vcrelax.in   \n",
+       "\n",
+       "                calc_name calc_type                    calc_out  \n",
+       "0    LiMn1.5Ni0.5O4.scf.1       scf    LiMn1.5Ni0.5O4.scf.1.out  \n",
+       "1    LiMn1.5Ni0.5O4.scf.2       scf    LiMn1.5Ni0.5O4.scf.2.out  \n",
+       "2      LiMn1.5Ni0.5O4.dos       dos      LiMn1.5Ni0.5O4.dos.out  \n",
+       "3     LiMn1.5Ni0.5O4.pdos      pdos     LiMn1.5Ni0.5O4.pdos.out  \n",
+       "4  LiMn1.5Ni0.5O4.vcrelax   vcrelax  LiMn1.5Ni0.5O4.vcrelax.out  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
