Commit before changing structures.
Seems like removing reorder_atoms() indeed solves the error with the
workchain. Change structures to use the DFT+U+V optimized ones, and
submit a first SCF Hubbard workchain as a test.

--- a/code/debug-scfhubbard.ipynb
+++ b/code/debug-scfhubbard.ipynb
@@ -24,110 +24,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bc9ecf45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SelfConsistentHubbardWorkChain<2234> Finished [402] [1:while_(should_run_iteration)(1:if_(should_run_relax)(1:inspect_relax))]\n",
-      "    ├── PwBaseWorkChain<2236> Finished [0] [4:results]\n",
-      "    │   ├── create_kpoints_from_distance<2237> Finished [0]\n",
-      "    │   └── PwCalculation<2241> Finished [0]\n",
-      "    ├── PwBaseWorkChain<2261> Finished [0] [4:results]\n",
-      "    │   ├── create_kpoints_from_distance<2262> Finished [0]\n",
-      "    │   └── PwCalculation<2266> Finished [0]\n",
-      "    ├── HpWorkChain<2284> Finished [0] [2:results]\n",
-      "    │   └── HpBaseWorkChain<2286> Finished [0] [3:results]\n",
-      "    │       └── HpCalculation<2288> Finished [0]\n",
-      "    ├── structure_relabel_kinds<2307> Finished [0]\n",
-      "    └── PwRelaxWorkChain<2310> Finished [401] [1:while_(should_run_relax)(1:inspect_relax)]\n",
-      "        └── PwBaseWorkChain<2313> Finished [300] [3:while_(should_run_process)(2:inspect_process)]\n",
-      "            ├── create_kpoints_from_distance<2314> Finished [0]\n",
-      "            └── PwCalculation<2318> Finished [305]\n",
-      "Property     Value\n",
-      "-----------  ---------------------------------------------------------------------\n",
-      "type         SelfConsistentHubbardWorkChain\n",
-      "state        Finished [402] The PwRelaxWorkChain sub process failed in iteration 2\n",
-      "pk           2234\n",
-      "uuid         8a7af431-03dd-44f4-a84c-a17e55ead812\n",
-      "label\n",
-      "description\n",
-      "ctime        2023-02-16 10:03:47.493781+01:00\n",
-      "mtime        2023-02-16 10:21:15.871575+01:00\n",
-      "\n",
-      "Inputs                               PK    Type\n",
-      "-----------------------------------  ----  --------------------\n",
-      "hubbard\n",
-      "    hp\n",
-      "        code                         2183  InstalledCode\n",
-      "        qpoints                      2223  KpointsData\n",
-      "        parameters                   2224  Dict\n",
-      "        settings                     2225  Dict\n",
-      "    clean_workdir                    2226  Bool\n",
-      "    max_iterations                   2227  Int\n",
-      "    parallelize_atoms                2228  Bool\n",
-      "relax\n",
-      "    base\n",
-      "        pw\n",
-      "            pseudos\n",
-      "                Ti                   14    UpfData\n",
-      "                O                    74    UpfData\n",
-      "                Ba                   45    UpfData\n",
-      "            code                     2182  InstalledCode\n",
-      "            parameters               2210  Dict\n",
-      "        kpoints_distance             2211  Float\n",
-      "        kpoints_force_parity         2212  Bool\n",
-      "        max_iterations               2213  Int\n",
-      "    clean_workdir                    2214  Bool\n",
-      "    max_meta_convergence_iterations  2215  Int\n",
-      "    meta_convergence                 2216  Bool\n",
-      "    volume_convergence               2217  Float\n",
-      "scf\n",
-      "    pw\n",
-      "        pseudos\n",
-      "            Ti                       14    UpfData\n",
-      "            O                        74    UpfData\n",
-      "            Ba                       45    UpfData\n",
-      "        code                         2182  InstalledCode\n",
-      "        parameters                   2218  Dict\n",
-      "    clean_workdir                    2219  Bool\n",
-      "    kpoints_distance                 2220  Float\n",
-      "    kpoints_force_parity             2221  Bool\n",
-      "    max_iterations                   2222  Int\n",
-      "clean_workdir                        2232  Bool\n",
-      "hubbard_structure                    2184  HubbardStructureData\n",
-      "max_iterations                       2233  Int\n",
-      "meta_convergence                     2231  Bool\n",
-      "tolerance_intersite                  2230  Float\n",
-      "tolerance_onsite                     2229  Float\n",
-      "\n",
-      "Called                       PK  Type\n",
-      "-------------------------  ----  -----------------------\n",
-      "iteration_01_scf_smearing  2236  PwBaseWorkChain\n",
-      "iteration_01_scf_fixed     2261  PwBaseWorkChain\n",
-      "iteration_01_hp            2284  HpWorkChain\n",
-      "CALL                       2307  structure_relabel_kinds\n",
-      "iteration_02_relax         2310  PwRelaxWorkChain\n",
-      "\n",
-      "Log messages\n",
-      "----------------------------------------------\n",
-      "There are 11 log messages for this calculation\n",
-      "Run 'verdi process report 2234' to see them\n"
-     ]
-    }
-   ],
    "source": [
-    "%%bash\n",
-    "verdi process status 2234\n",
-    "verdi process show 2234"
+    "***\n",
+    "### Development of `structure_relabel_kinds`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "id": "a803505a",
    "metadata": {},
    "outputs": [
@@ -135,7 +43,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HUBBARD\tortho-atomic\n",
+      "Hubbard card before structure_relabel_kinds\n",
+      "\n",
+      " HUBBARD\tortho-atomic\n",
       " U\tTi-3d\t5.0\n",
       " V\tTi-3d\tO-2p\t1\t4\t0.0001\n",
       " V\tTi-3d\tO-2p\t1\t2\t0.0001\n",
@@ -145,9 +55,9 @@
       " V\tTi-3d\tO-2p\t1\t114\t0.0001\n",
       " V\tTi-3d\tO-2p\t1\t69\t0.0001\n",
       "\n",
-      "<class 'aiida_quantumespresso.data.hubbard_structure.HubbardStructureData'>\n",
-      "False\n",
-      "HUBBARD\t{ortho-atomic}\n",
+      "Hubbard card after structure_relabel_kinds\n",
+      "\n",
+      " HUBBARD\t{ortho-atomic}\n",
       " U\tTi0-3d\t6.1627\n",
       " V\tTi0-3d\tO2-2p\t1\t4\t1.5744\n",
       " V\tTi0-3d\tO1-2p\t1\t2\t1.5742\n",
@@ -160,19 +70,15 @@
     }
    ],
    "source": [
-    "from aiida_quantumespresso_hp.calculations.functions import structure_relabel_kinds\n",
-    "from aiida_quantumespresso_hp.workflows.hubbard import SelfConsistentHubbardWorkChain\n",
-    "\n",
-    "# structure_relabel_kinds()\n",
     "import importlib\n",
+    "from aiida_quantumespresso_hp.calculations.functions import structure_relabel_kinds\n",
     "importlib.reload(structure_relabel_kinds)\n",
     "\n",
-    "failed_workchain = load_node(2234)\n",
     "hubbard_data = load_node(2502)\n",
     "last_hpcalculation = load_node(2284)\n",
     "\n",
     "qe_hubbard_card_before = hubbard_data.get_quantum_espresso_hubbard_card()\n",
-    "print(qe_hubbard_card_before)\n",
+    "print('Hubbard card before structure_relabel_kinds\\n\\n', qe_hubbard_card_before)\n",
     "\n",
     "relabel_output = structure_relabel_kinds.structure_relabel_kinds(\n",
     "    hubbard_structure=last_hpcalculation.outputs.hubbard_structure,\n",
@@ -181,7 +87,17 @@
     "\n",
     "qe_hubbard_card_after = relabel_output['hubbard_structure'].get_quantum_espresso_hubbard_card()\n",
     "\n",
-    "print(qe_hubbard_card_after)"
+    "print('Hubbard card after structure_relabel_kinds\\n\\n', qe_hubbard_card_after)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c62a4eee",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### Print erroneous Hubbard modification"
    ]
   },
   {
@@ -218,6 +134,37 @@
     "\n",
     "# hubbard_structure = last_hpcalculation.outputs.hubbard_structure # hubbard structure of HpCalculation, 1. required argument\n",
     "# hubbard = last_hpcalculation.outputs.hubbard # hubbard dict of HpCalculation, 2. required argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e0de07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aiida_quantumespresso_hp.calculations.functions import structure_relabel_kinds\n",
+    "from aiida_quantumespresso_hp.workflows.hubbard import SelfConsistentHubbardWorkChain\n",
+    "\n",
+    "# structure_relabel_kinds()\n",
+    "import importlib\n",
+    "importlib.reload(structure_relabel_kinds)\n",
+    "\n",
+    "failed_workchain = load_node(2234)\n",
+    "hubbard_data = load_node(2502)\n",
+    "last_hpcalculation = load_node(2284)\n",
+    "\n",
+    "qe_hubbard_card_before = hubbard_data.get_quantum_espresso_hubbard_card()\n",
+    "print(qe_hubbard_card_before)\n",
+    "\n",
+    "relabel_output = structure_relabel_kinds.structure_relabel_kinds(\n",
+    "    hubbard_structure=last_hpcalculation.outputs.hubbard_structure,\n",
+    "    hubbard=last_hpcalculation.outputs.hubbard\n",
+    ")\n",
+    "\n",
+    "qe_hubbard_card_after = relabel_output['hubbard_structure'].get_quantum_espresso_hubbard_card()\n",
+    "\n",
+    "print(qe_hubbard_card_after)"
    ]
   }
  ],
