Now, proper ordering with Mn, then O, then rest.

--- a/code/debug-scfhubbard.ipynb
+++ b/code/debug-scfhubbard.ipynb
@@ -150,21 +150,67 @@
     "import importlib\n",
     "importlib.reload(structure_relabel_kinds)\n",
     "\n",
-    "failed_workchain = load_node(2234)\n",
+    "failed_scfh_workchain = load_node(2234)\n",
     "hubbard_data = load_node(2502)\n",
-    "last_hpcalculation = load_node(2284)\n",
+    "failed_hp_workchain = load_node(2284)\n",
     "\n",
     "qe_hubbard_card_before = hubbard_data.get_quantum_espresso_hubbard_card()\n",
     "print(qe_hubbard_card_before)\n",
     "\n",
     "relabel_output = structure_relabel_kinds.structure_relabel_kinds(\n",
-    "    hubbard_structure=last_hpcalculation.outputs.hubbard_structure,\n",
-    "    hubbard=last_hpcalculation.outputs.hubbard\n",
+    "    hubbard_structure=failed_hp_workchain.outputs.hubbard_structure,\n",
+    "    hubbard=failed_hp_workchain.outputs.hubbard\n",
     ")\n",
     "\n",
     "qe_hubbard_card_after = relabel_output['hubbard_structure'].get_quantum_espresso_hubbard_card()\n",
     "\n",
     "print(qe_hubbard_card_after)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e04fbdaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[22m2023-02-16 10:03:50 [18 | REPORT]: [2234|SelfConsistentHubbardWorkChain|setup]: system is treated to be non-magnetic because `nspin == 1` in `scf.pw.parameters` input.\n",
+      "2023-02-16 10:03:51 [19 | REPORT]: [2234|SelfConsistentHubbardWorkChain|should_run_relax]: skip_first_relax has been set True; skipping first relaxion...\n",
+      "2023-02-16 10:03:51 [20 | REPORT]: [2234|SelfConsistentHubbardWorkChain|run_scf_smearing]: launching PwBaseWorkChain<2236> with smeared occupations\n",
+      "2023-02-16 10:03:54 [21 | REPORT]:   [2236|PwBaseWorkChain|run_process]: launching PwCalculation<2241> iteration #1\n",
+      "2023-02-16 10:06:21 [26 | REPORT]:   [2236|PwBaseWorkChain|results]: work chain completed after 1 iterations\n",
+      "2023-02-16 10:06:21 [27 | REPORT]:   [2236|PwBaseWorkChain|on_terminated]: remote folders will not be cleaned\n",
+      "2023-02-16 10:06:21 [28 | REPORT]: [2234|SelfConsistentHubbardWorkChain|recon_scf]: after relaxation, system is determined to be an insulator\n",
+      "2023-02-16 10:06:22 [29 | REPORT]: [2234|SelfConsistentHubbardWorkChain|run_scf_fixed]: launching PwBaseWorkChain<2261> with fixed occupations\n",
+      "2023-02-16 10:06:25 [30 | REPORT]:   [2261|PwBaseWorkChain|run_process]: launching PwCalculation<2266> iteration #1\n",
+      "2023-02-16 10:11:34 [36 | REPORT]:   [2261|PwBaseWorkChain|results]: work chain completed after 1 iterations\n",
+      "2023-02-16 10:11:34 [37 | REPORT]:   [2261|PwBaseWorkChain|on_terminated]: remote folders will not be cleaned\n",
+      "2023-02-16 10:11:35 [38 | REPORT]: [2234|SelfConsistentHubbardWorkChain|run_hp]: launching HpWorkChain<2284> iteration #1\n",
+      "2023-02-16 10:11:36 [39 | REPORT]:   [2284|HpWorkChain|run_base_workchain]: running in serial, launching HpBaseWorkChain<2286>\n",
+      "2023-02-16 10:11:36 [40 | REPORT]:     [2286|HpBaseWorkChain|run_process]: launching HpCalculation<2288> iteration #1\n",
+      "2023-02-16 10:18:47 [46 | REPORT]:     [2286|HpBaseWorkChain|results]: work chain completed after 1 iterations\n",
+      "2023-02-16 10:18:47 [47 | REPORT]:     [2286|HpBaseWorkChain|on_terminated]: remote folders will not be cleaned\n",
+      "2023-02-16 10:18:48 [48 | REPORT]: [2234|SelfConsistentHubbardWorkChain|check_convergence]: new types have been determined: relabeling the structure and starting new iteration.\n",
+      "2023-02-16 10:18:49 [49 | REPORT]: [2234|SelfConsistentHubbardWorkChain|check_convergence]: The new and old Hubbard parameters have different lenghts. Assuming to be at the first cycle.\n",
+      "2023-02-16 10:18:50 [50 | REPORT]: [2234|SelfConsistentHubbardWorkChain|run_relax]: launching PwRelaxWorkChain<2310> iteration #2\n",
+      "2023-02-16 10:18:51 [51 | REPORT]:   [2310|PwRelaxWorkChain|run_relax]: launching PwBaseWorkChain<2313>\n",
+      "2023-02-16 10:18:52 [52 | REPORT]:     [2313|PwBaseWorkChain|run_process]: launching PwCalculation<2318> iteration #1\n",
+      "2023-02-16 10:21:15 [57 | REPORT]:     [2313|PwBaseWorkChain|report_error_handled]: PwCalculation<2318> failed with exit status 305: Both the stdout and XML output files could not be read or parsed.\n",
+      "2023-02-16 10:21:15 [58 | REPORT]:     [2313|PwBaseWorkChain|report_error_handled]: Action taken: unrecoverable error, aborting...\n",
+      "2023-02-16 10:21:15 [59 | REPORT]:     [2313|PwBaseWorkChain|inspect_process]: PwCalculation<2318> failed but a handler detected an unrecoverable problem, aborting\n",
+      "2023-02-16 10:21:15 [60 | REPORT]:     [2313|PwBaseWorkChain|on_terminated]: remote folders will not be cleaned\n",
+      "2023-02-16 10:21:15 [61 | REPORT]:   [2310|PwRelaxWorkChain|inspect_relax]: relax PwBaseWorkChain failed with exit status 300\n",
+      "2023-02-16 10:21:15 [62 | REPORT]:   [2310|PwRelaxWorkChain|on_terminated]: remote folders will not be cleaned\n",
+      "2023-02-16 10:21:15 [63 | REPORT]: [2234|SelfConsistentHubbardWorkChain|inspect_relax]: PwRelaxWorkChain failed with exit status 401\n",
+      "2023-02-16 10:21:15 [64 | REPORT]: [2234|SelfConsistentHubbardWorkChain|on_terminated]: remote folders will not be cleaned\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!verdi process report 2234"
    ]
   }
  ],
